too big font fix

--- a/sita.css
+++ b/sita.css
@@ -57,11 +57,11 @@
 }
 
 #homepage_text h1{
-    font-size: xx-large;
+    font-size: x-large;
 }
 
 #hompage_text h2{
-    font-size: larger;
+    font-size: large;
 }
 
 #scroll-down{
